--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <a href="dgabai3.pdf"><button type="button" id="learnMore" class="btn btn-primary-outline btn-lg">Resume</button></a>
         </div>
     </div>
-    <div id="portfolio">
-        <div class="subname">Portfolio</div><br>
+    <div class="portfolio">
+        <div class="subname">Portfolio</div>
         <a href="https://group6-speakup.herokuapp.com/"><img class="porti" src="thumb6.jpg" width=300 height=220></a>
         <a href="http://dgabai1.github.io/GamingVideos/"><img class="porti" src="thumb2.jpg" width=300 height=220></a>
         <a href="https://dgabai1.github.io/tetris/"><img class="porti" src="thumb8.jpg" width=300 height=220></a>
@@ -87,7 +87,8 @@
     
     </div>
     <div id="plants">
-        <div class="subname2">Animations</div><br>
+        Animations
+        <div class="subname2">Animations</div>
         <div class="animations">I enjoy creating CSS Animations, <br> To check them out click the link below </div>
         <!-- <div class="interests fadeInUp animated" style="animation-delay:2s"><img class="iphone4" src="iphone4.svg"></div> -->
         <a href="landing-gears.html"><button type="button" id="learnMore3" class="btn btn-primary-outline btn-lg">Animations</button></a>
