--- a/index2.html
+++ b/index2.html
@@ -19,17 +19,18 @@
     <div id="deer">
         <div class="main">
             <div id="navIt">
-                <div id="cleaner" class="fadeInUp animated">Donny Gabai</div>
-                <ul class="lanks">
+                <img class="ham" src="hamb.svg" style="height:40px;">
+                        <a href="#"></a>
+                </img>
+                <div class="cleaner" class="fadeInUp animated"><p>Hi, I'm Donny.</p><p> I design and build web applications.</p></div>
+                <!-- <ul class="lanks">
                     <li><a href="#">home |</a></li>
                     <li><a href="#bio">about |</a></li>
-                    <li><a href="#contact">contact |</a></li>
-                    <li><a href="#portfolio">portfolio</a></li>
-                </ul>
+                    <li><a href="#contact">animations |</a></li>
+                    <li><a href="#portfolio">projects</a></li>
+                </ul> -->
             </div>
         </div>
-        
-        <br><br>
 
         <div id="star"></div>
         <div id="star2"></div>
@@ -50,48 +51,53 @@
         <div id="fly5"></div>
         <div id="fly6"></div>
 
-        <!-- <button type="button" id="learnMore2" class="btn btn-primary-outline btn-lg">Learn More</button> -->
+        <button type="button" id="learnMore2" class="btn btn-primary-outline btn-lg">Learn More</button>
 
     </div>
-    <div id="bio">
-        <div class="subname">About me</div>
-        <br><br>
-        <div id="about">
-            &bull; Hi! My name is Donny Gabai. I am a Web Developer/Designer
-            <br><br> &bull; I enjoy making clean and efficient web applications
-            <br><br> &bull; Let's build something beautiful together
-            <br><br> &bull; Currently seeking a jr web development position
+    <div id="about">
+        <!-- <div class="subname">About me</div> -->
+
+        <div class="info">
+            <p>Hi, I'm Donny. I design and build web applications.
+            I design, develop and code all my own websites.
+            I enjoy making clean and efficient web applications.
+            Let's build something beautiful together!</p>
         </div>
-        <div id="face">
-            <img src="dzg.png" width="250px;" alt="an image of myself">
+
+        <div class="mySkills">What I do</div>
+            <div class="skills">React &bull; Node &bull; Javascript mySQL &bull; Mongo &bull; HTML CSS &bull; Express &bull; JQuery Bootstrap &bull; Node &bull; Firebase &bull;        Wordpres</div>
+            <div class="resume"><p>To See my Resume</p><p>click the link below</p>
+            <a href="dgabai3.pdf"><button type="button" id="learnMore" class="btn btn-primary-outline btn-lg">Resume</button></a>
+        </div>
+        <div class="face">
+                <img src="dzg.png" width="200px;" alt="me">
+            </div>
+    </div>
+
+    <div class="projects">
+        <div class="subname">Personal Projects</div>
+            <div class="speakup">
+                <a href="https://group6-speakup.herokuapp.com/"><img class="porti" src="thumb6.jpg" width=300 height=220></a>
+                <p><strong>SpeakUp</strong> - A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make username and join a chat room!</p>
+            </div>
+            <div class="epicgg">
+                <a href="http://dgabai1.github.io/GamingVideos/"><img class="porti" src="thumb2.jpg" width=300 height=220></a>
+                <p><strong>EpicGG</strong> - Get all of your video game content in one place. <strong>EpiccGG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
+            </div>
+            <div class="jambook">
+            <a href="https://jambook-new.herokuapp.com/"><img class="porti" src="thumb7.jpg" width=300 height=220></a>
+            <p><strong>Jambook</strong> - Tired of playing music alone? Try <strong>Jambook</strong>, an easy way to find musicians to Jam with! You can sort by location and skill level. </p>
+            </div>
+            <div class="tetris">
+            <a href="https://dgabai1.github.io/tetris/"><img class="porti" src="thumb8.jpg" width=300 height=220></a>
+            <p><strong>Tetris</strong> - What could be more fun than putting stacking colored blocks on top of each other. The Classic <strong>Tetris</strong> is back! </p>
         </div>
     </div>
 
-    <div class="asleep">
-        <div class="mySkills">The tools and technologies
-            <br>that I bring to the table:
-        </div>
-        <div id="resumeButton">Feel free to checkout my</div>
-
-        <a href="dgabai3.pdf"><button type="button" id="learnMore" class="btn btn-primary-outline btn-lg">Resume</button></a>
-
-
-        <div class="skills">React &bull; Node &bull; Javascript <br><br> mySQL &bull; Mongo &bull; HTML <br><br> CSS &bull; Express &bull; JQuery <br><br> Bootstrap &bull; Firebase</div>
-
-
-    </div>
-    <div id="portfolio">
-        <div class="subname">Portfolio</div><br>
-        <div id=porti>
-        <a href="https://group6-speakup.herokuapp.com/"><img src="thumb6.jpg" width=300 height=220></a>
-        <a href="http://dgabai1.github.io/GamingVideos/"><img  src="thumb2.jpg" width=300 height=220></a>
-        <a href="https://dgabai1.github.io/tetris/"><img src="thumb8.jpg" width=300 height=220></a>
-        <a href="https://jambook-new.herokuapp.com/"><img src="thumb7.jpg" width=300 height=220></a>
-        </div>
-    
-    </div>
     <div id="plants">
-        <div id="mobile-ready">I enjoy creating simple animations, <br> for a sneak peek click the link below </div>
+        <div class="subname2">Animations</div>
+        <div class="animations">I enjoy creating CSS Animations, <br> To check them out click the link below </div>
+        <!-- <div class="interests fadeInUp animated" style="animation-delay:2s"><img class="iphone4" src="iphone4.svg"></div> -->
         <a href="landing-gears.html"><button type="button" id="learnMore3" class="btn btn-primary-outline btn-lg">Animations</button></a>
     </div>
 
@@ -99,8 +105,38 @@
 
         <a href="https://github.com/dgabai1"><img src="githublogo.jpg" class="social" alt="GitHub" /></a>
         <a href="https://www.linkedin.com/in/daniel-gabai/"><img src="linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/7753778/daniel-g"><img src="stack.jpg" class="social" alt="Stack Overflow" /></a>
-
+        <a href="https://stackoverflow.com/users/7753778/daniel-g"><img src="stack.png" class="social" alt="Stack Overflow" /></a>
+        <a href="https://stackoverflow.com/users/7753778/daniel-g"><img src="Facebook-logo-f.png" class="social" alt="facebook" /></a>
+        <div class="copyright">Donny Gabai &copy; 2017</div>
     </div>
+    <script>
+    </script>
 </body>
+<script>
+    var $deer = $('.deer');
+    var $win = $(window);
+    var $learn = $('#learnMore2');
+
+    $learn.click(function() {
+        $('html, body').animate({
+            scrollTop: $("#bio").offset().top
+        }, 1500);
+    });
+
+
+    // var $skills = $('.skills');
+
+    // $skills.waypoint(function(direction) {
+    //     if (direction == 'down') {
+    //         $skills.addClass('skills-animate');
+    //         console.log(1);
+    //     } else {
+    //         $skills.removeClass('skills-animate');
+    //         console.log(2);
+    //     }
+    // }, {
+    //     offset: '50%'
+    // });
+</script>
+
 </html>
