bootstrap rows and columns

--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
                 <img class="ham" src="hamb.svg" style="height:40px;">
                         <a href="#"></a>
                 </img>
-                <div class="cleaner" class="fadeInUp animated"><p>Hi, I'm Donny.</p><p> I design and build web applications.</p></div>
+                <div class="cleaner" class="fadeInUp animated"></div>
                 <!-- <ul class="lanks">
                     <li><a href="#">home |</a></li>
                     <li><a href="#bio">about |</a></li>
@@ -55,24 +55,27 @@
 
     </div>
     <div id="about">
-        <!-- <div class="subname">About me</div> -->
-
-        <div class="info">
-            <p>Hi, I'm Donny. I design and build web applications.
-            I design, develop and code all my own websites.
-            I enjoy making clean and efficient web applications.
-            Let's build something beautiful together!</p>
-        </div>
-
-        <div class="mySkills">What I do</div>
-            <div class="skills">React &bull; Node &bull; Javascript mySQL &bull; Mongo &bull; HTML CSS &bull; Express &bull; JQuery Bootstrap &bull; Node &bull; Firebase &bull;        Wordpres</div>
-            <div class="resume"><p>To See my Resume</p><p>click the link below</p>
-            <a href="dgabai3.pdf"><button type="button" id="learnMore" class="btn btn-primary-outline btn-lg">Resume</button></a>
-        </div>
-        <div class="face">
-                <img src="dzg.png" width="200px;" alt="me">
+        <div class="row">
+            <div class="col-md-3 col-md-offset-1 info">
+                <p>Hi, I'm Donny. I design and build web applications.
+                    I design, develop and code all my own websites.
+                    I enjoy making clean and efficient web applications.
+                    Let's build something beautiful together!
+                </p>
             </div>
+
+        <div class="col-md-3 col-md-offset-1 skills">
+            <p><strong>Front-end</strong></p>
+                <p>HTML, CSS3, Javascript, React <p></p> Bootstrap, Materialize, Wordpress</p>
+            <p><strong>Back-end</strong></p>
+                <p>Node, mySQL, MongoDB, </p><p> Express, JQuery, Firebase </p>
+        </div>        
+
+        <div class="col-md-3 col-md-offset-1 face">
+            <img src="dzg.png" style="width:200px;" alt="me">
+        </div>
     </div>
+</div>
 
     <div class="projects">
         <div class="subname">Personal Projects</div>
@@ -99,6 +102,10 @@
         <div class="animations">I enjoy creating CSS Animations, <br> To check them out click the link below </div>
         <!-- <div class="interests fadeInUp animated" style="animation-delay:2s"><img class="iphone4" src="iphone4.svg"></div> -->
         <a href="landing-gears.html"><button type="button" id="learnMore3" class="btn btn-primary-outline btn-lg">Animations</button></a>
+
+        <div class="resume"><p>To See my Resume</p><p>click the link below</p>
+            <a href="dgabai3.pdf"><button type="button" id="learnMore" class="btn btn-primary-outline btn-lg">Resume</button></a>
+        </div>
     </div>
 
     <div id="contact">
