--- a/index2.html
+++ b/index2.html
@@ -19,9 +19,17 @@
     <div id="deer">
         <div class="main">
             <div id="navIt">
-                <img class="ham" src="hamb.svg" style="height:40px;">
-                        <a href="#"></a>
-                </img>
+              <img class="ham" onlclick="showNav();" src="hamb.svg" style="height:40px;"></img>
+
+                <div class="hideNav">
+                    <ul>
+                        <li><a href="#">home |</a></li>
+                        <li><a href="#bio">about |</a></li>
+                        <li><a href="#contact">contact |</a></li>
+                        <li><a href="#portfolio">portfolio</a></li>
+                    </ul>
+                </div>
+
                 <div class="cleaner" class="fadeInUp animated navHeaderCollapse">
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1000 250" width="1000" height="250"><defs><path d="M37.29 77.35C10.36 69.31 1.09 43.56 20.56 33.58C40.03 23.61 90.77 19.05 115.17 37.45C157.01 68.98 194.99 123.05 135.13 160.38C75.27 197.71 73.98 132.06 20.56 153.3C-32.87 174.54 77.84 183.55 65.61 160.38C57.46 144.94 55.31 106.53 59.18 45.17" id="aiJGpFF8V"></path><path d="M478.79 138.7C469.95 149.37 464.41 155.78 462.19 157.93C454.07 165.79 445.97 173.93 442.4 177.46C441.06 178.78 433.27 185.82 427.62 193.09C423.08 198.91 420.4 206.73 420.01 211.94C419.78 215 421.96 219.89 425.01 223.06C428.82 227.03 433.96 228.92 437.45 228.09C438.89 227.75 444.89 228.74 447.03 219.48C449.14 210.34 451.2 196.33 453.23 177.46C455.1 160.04 456.93 138.47 458.73 112.75C455.6 133.45 451.41 146.81 446.16 152.82C443.23 156.18 437.72 157.74 429.65 157.48C425.96 157.36 422.92 154.56 422.5 150.9C421.91 145.81 420.44 133.1 418.09 112.75C419.94 142.25 413.08 159.2 397.53 163.6C374.2 170.2 397.51 139.14 389.14 123.05C384.9 114.89 378.43 111.38 369.74 112.53C365.68 113.07 362.23 115.76 360.72 119.56C349.3 148.27 345.62 162.52 349.67 162.31C353.96 162.1 352.22 159.03 351.33 151.81C350.44 144.58 348.1 133.64 344.33 118.99C335.73 150.02 325.22 165.1 312.77 164.24C300.33 163.39 297.97 150.51 305.69 125.63C308.27 117.9 303.98 113.61 292.82 112.75C276.09 111.47 251.63 173.26 261.28 162.31C267.72 155.02 267.72 139.14 261.28 114.68C234.68 132.71 219.02 137 214.3 127.56C210.79 120.55 215.96 116.64 222.08 117.34C228.31 118.06 235.54 123.59 235.54 134.64C235.54 156.52 212.79 168.75 197.34 162.31C187.3 158.13 182.33 153.02 183.56 141.07C184.22 134.64 188.52 126.53 192 123.49C201.97 114.8 211.13 116.12 210.19 115.55" id="f1G9tOoBLK"></path><path d="M660.2 133.52C648.76 142.47 641.61 148.06 638.75 150.29C622.12 163.3 608.89 180.15 600.2 199.4C598.6 202.92 602.84 193.54 600.2 199.4C595.5 209.8 598.33 222.07 607.12 229.35C612.11 233.48 604.84 227.46 607.99 230.07C617.37 237.84 631.54 230.95 631.22 218.78C628.4 112.53 631.26 63.41 639.81 71.42C655.34 85.98 621.36 159.47 553.4 174.03C534.71 178.03 508.81 175.27 503.2 157.77C496.06 135.51 499.77 102.47 514.98 75.53C521.9 63.26 533.03 47.43 546.26 39.54C564.15 28.88 584.23 26.53 587.38 26.06C615.13 21.99 637.46 30.31 654.37 51.03" id="b5gWfnHBtj"></path><path d="M802.74 132.5C798.11 126.09 796.47 121.93 797.83 120.02C799.66 117.44 808.93 117.45 815.63 127.88C827.08 145.68 818.25 162.09 802.74 168.09C794.57 171.26 787.69 170.97 778.64 170.3C761.17 169.01 755.02 143.8 760.2 94.69C768.36 51.95 775.35 29.28 781.16 26.67C796.86 19.61 788.43 76.42 786.88 81.89C778.59 111.11 771.55 145.26 739.15 162.3C732.42 165.84 728.11 154.37 726.22 127.88C722.47 144.07 717.67 154 711.83 157.64C698.18 166.16 683.3 164.04 678.18 162.3C665.18 157.87 670.75 131.34 682.76 120.02C690.77 112.48 705.25 111.47 726.22 117.02" id="b2afMgsppt"></path><path d="M991.27 165.53C978.32 174.41 970.88 159.24 968.94 120.02C962.01 148.2 952.73 164.28 941.08 168.26C929.43 172.24 924.06 161.64 924.99 136.44C921.28 161.21 910.68 172.3 893.21 169.71C866.99 165.83 860.85 147.49 882.21 130.02C896.45 118.37 908.23 115.36 917.56 121C925.47 122.52 927.73 123.02 924.35 122.49C921.53 122.05 919.96 118.76 906.12 118.17C893.57 117.64 885.96 122.27 882.21 125C872.32 132.21 877.75 148.59 855.93 158.44C849.01 161.57 843.07 159.42 838.12 158.44C828.73 156.58 822.89 148.39 820.61 133.88" id="eInj2OfBP"></path><path d="" id="ayFOvH8P4"></path><path d="" id="brmiKq7zu"></path><path d="M973.72 102.89C973.72 105.1 971.92 106.89 969.72 106.89C967.51 106.89 965.72 105.1 965.72 102.89C965.72 100.68 967.51 98.89 969.72 98.89C971.92 98.89 973.72 100.68 973.72 102.89Z" id="b26awKmJw"></path></defs>
                             <g><g>
@@ -35,12 +43,7 @@
                                 <g><use xlink:href="#b26awKmJw" opacity="1" fill="#ffffff" fill-opacity="0"></use>
                                     <g><use xlink:href="#b26awKmJw" opacity="1" fill-opacity="0" stroke="#ffffff" stroke-width="4" stroke-opacity="1"></use></g></g></g></g></svg>
                 </div>
-                <!-- <ul class="lanks">
-                    <li><a href="#">home |</a></li>
-                    <li><a href="#bio">about |</a></li>
-                    <li><a href="#contact">contact |</a></li>
-                    <li><a href="#portfolio">portfolio</a></li>
-                </ul> -->
+
             </div>
         </div>
         <div id="star"></div>
@@ -69,21 +72,17 @@
                     <div class="subname2">Me</div>
                 </div>
         <div class="row">
-            <div class="col-md-3 col-md-offset-1 who">
+            <div class="col-md-3 col-md-offset-2 who">
                 Who I am
             </div>
             <div class="col-md-3 what">
                 What I do    
-            </div>
-            <div class="col-md-2 resume">
-                    <p>If you would rather look at a standard resume click here</p>
-            </div>      
+            </div>     
         </div>
         <div class="row">
-            <div class="col-md-3 col-md-offset-1 info">
-                <p>Hi, I'm Donny. I design and build web applications.
-                    I design, develop and code all my own websites.
-                    I enjoy making clean and efficient web applications.
+            <div class="col-md-3 col-md-offset-2 info">
+                <p>Hi, I'm Donny. I'm a Web Developer with a passion for clean code and simple design.
+                     
                     Let's build something beautiful together!
                 </p>
             </div>
@@ -93,11 +92,8 @@
                 <p>HTML, CSS3, Javascript, React <p></p> Bootstrap, Materialize, Wordpress</p>
             <p><strong>Back-end</strong></p>
                 <p>Node, mySQL, MongoDB, </p><p> Express, JQuery, Firebase </p>
-        </div>        
-        <div class="col-md-1 learnMore">
-                <a href="dgabai3.pdf"><button type="button" class="btn btn-primary-outline btn-lg">Resume</button></a>
         </div>
-        <div class="col-md-1 col-md-offset-1">
+        <div class="col-md-1 col-md-offset-">
             <img class="face" src="dzg.png" style="width:200px;" alt="me">
         </div>
     </div>
@@ -113,30 +109,38 @@
                 <a href="https://gt-speakup.herokuapp.com/"><img class="porti" src="speakup.png" width="400" height="250"></a>
             </div>
             <div class="col-md-offset-1 col-md-3 speakup2">
-                <p><strong>SpeakUp</strong> - A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
                 <div class="magic">
                     <a href="https://gt-speakup.herokuapp.com/">SpeakUp</a>
                 </div>
+                <p><strong>SpeakUp</strong> - A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
             </div>
         </div>  
         <div class="row">
-            <div class="col-md-offset-5 col-md-3 role"><p>Role:Front-End Team</p><p>Generated Idea</p><p>Logo Design</p></div>
+            <div class="col-md-offset-5 col-md-2 role">
+                <p>Role:Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
+            </div>
         </div>
 
         <hr class="block">
 
         <div class="row">  
             <div class="col-md-offset-3 col-md-3 epicgg">
+                    <div class="magic">
+                            <a href="http://dgabai1.github.io/GamingVideos/">EpicGG</a>
+                        </div>
                 <p><strong>EpicGG</strong> - Get all of your video game content in one place. <strong>EpiccGG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
-                <div class="magic">
-                    <a href="http://dgabai1.github.io/GamingVideos/">EpicGG</a>
-                </div>
+
             </div>    
             <div class="col-md-3 epicgg2">    
                 <a href="http://dgabai1.github.io/GamingVideos/"><img class="porti" src="epicgg.png" width="400" height="250"></a>
 
             </div>
         </div>
+        <div class="row">
+                <div class="col-md-offset-5 col-md-2 role">
+                    <p>Role:Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
+                </div>
+            </div>
 
         <hr class="block">
 
@@ -145,17 +149,23 @@
                 <a href="https://jambook-new.herokuapp.com/"><img class="porti" src="jambook.png" width="400" height="250"></a>
             </div>
             <div class="col-md-offset-1 col-md-3 jambook2">    
+                    <div class="magic">
+                            <a href="https://jambook-new.herokuapp.com/">Jambook</a>
+                            </div>
                 <p><strong>Jambook</strong> - Tired of playing music alone? Try <strong>Jambook</strong>, an easy way to find musicians to Jam with! You can sort by location and skill level. </p>
-                <div class="magic">
-                    <a href="https://jambook-new.herokuapp.com/">Jambook</a>
-                    </div>
+
             </div>
         </div>
+        <div class="row">
+                <div class="col-md-offset-5 col-md-2 role">
+                    <p>Role:Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
+                </div>
+            </div>
 
         <hr class="block">
 
         <div class="row">
-                <div class="more">Want more? Email me!</div>
+                <div class="more">Want more? <u>Email me!<a href="dgabai3.pdf"></a></u></div>
             </div>
 
     </div>    
@@ -188,21 +198,6 @@
             scrollTop: $("#bio").offset().top
         }, 1500);
     });
-
-
-    // var $skills = $('.skills');
-
-    // $skills.waypoint(function(direction) {
-    //     if (direction == 'down') {
-    //         $skills.addClass('skills-animate');
-    //         console.log(1);
-    //     } else {
-    //         $skills.removeClass('skills-animate');
-    //         console.log(2);
-    //     }
-    // }, {
-    //     offset: '50%'
-    // });
 </script>
 
 </html>
