--- a/index2.html
+++ b/index2.html
@@ -81,10 +81,9 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-2 info">
-                <p>Hi, I'm Donny. I'm a Web Developer with a passion for clean code and simple design.
-                     
-                    Let's build something beautiful together!
-                </p>
+                <p>Hi, I'm Donny. I'm a Web Developer/Designer with a passion for clean code and beautiful design.
+                    I strive to write well designed, testable, efficient code by using best software development practices.</p>
+                    <p>Let's build something beautiful together!</p>
             </div>
 
         <div class="col-md-3 skills">
@@ -117,7 +116,7 @@
         </div>  
         <div class="row">
             <div class="col-md-offset-5 col-md-2 role">
-                <p>Role:Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
+                <p>Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
             </div>
         </div>
 
@@ -138,7 +137,7 @@
         </div>
         <div class="row">
                 <div class="col-md-offset-5 col-md-2 role">
-                    <p>Role:Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
+                    <p>Front-End Team</p><p>Implemented Map API</p><p>Built Events and Calendar page</p>
                 </div>
             </div>
 
@@ -158,7 +157,7 @@
         </div>
         <div class="row">
                 <div class="col-md-offset-5 col-md-2 role">
-                    <p>Role:Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
+                    <p>Front-End Team</p><p>Generated App Idea</p><p>Complete website design</p>
                 </div>
             </div>
 
