--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
         <div class="main">
             <div id="navIt">
               <img class="ham" onlclick="showNav();" src="hamb.svg" style="height:40px;"></img>
-            
+
                 <div class="hideNav">
                     <ul>
                         <li><a href="#">home |</a></li>
@@ -64,9 +64,7 @@
         <div id="fly6"></div>
         <button type="button" id="learnMore2" class="btn btn-primary-outline btn-lg">Learn More</button>
     </div>
-    <div class="cool-stuff">
-            
-    </div>
+
     <div class="about">
             <div class="row">
                     <div class="subname2">Me</div>
@@ -81,9 +79,9 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-2 info">
-                <p>Hi, I'm Donny. I'm a Web Developer/Designer with a passion for clean code and beautiful design.</p>
-                <p>I strive to write well designed, testable, efficient code by using best software development practices.</p>
-                <!-- <p>Let's build something beautiful together!</p> -->
+                <p>Hi, I'm Donny. I'm a Web Developer/Designer with a passion for clean code and beautiful design.
+                    I strive to write well designed, testable, efficient code by using best software development practices.</p>
+                    <p>Let's build something beautiful together!</p>
             </div>
 
         <div class="col-md-3 skills">
@@ -194,7 +192,7 @@
 
     $learn.click(function() {
         $('html, body').animate({
-            scrollTop: $("#bio").offset().top
+            scrollTop: $(".about").offset().top
         }, 1500);
     });
 </script>
