--- a/index2.html
+++ b/index2.html
@@ -118,14 +118,12 @@
                 <a href="https://gt-speakup.herokuapp.com/"><img class="porti" src="speakup.png" width="400" height="250"></a>
             </div>
             <div class="col-md-offset-1 col-md-3 speakup2">
-                <div class="magic">
-                    <a href="https://gt-speakup.herokuapp.com/">SpeakUp</a>
-                </div>
-                <p><strong>SpeakUp</strong> - A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
+                <p><strong><u>SpeakUp</u></strong></p>
+                <p>A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
             </div>
         </div>  
         <div class="row">
-            <div class="col-md-offset-5 col-md-2 role">
+            <div class="col-md-offset-6 col-md-4 role">
                 <p>Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
             </div>
         </div>
@@ -134,10 +132,8 @@
 
         <div class="row">  
             <div class="col-md-offset-3 col-md-3 epicgg">
-                    <div class="magic">
-                            <a href="http://dgabai1.github.io/GamingVideos/">EpicGG</a>
-                        </div>
-                <p><strong>EpicGG</strong> - Get all of your video game content in one place. <strong>EpiccGG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
+                        <p><strong><u>Epic GG</u></strong></p>
+                        <p>Get all of your video game content in one place. <strong>Epicc GG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
 
             </div>    
             <div class="col-md-3 epicgg2">    
@@ -146,7 +142,7 @@
             </div>
         </div>
         <div class="row">
-                <div class="col-md-offset-5 col-md-2 role">
+                <div class="col-md-offset-3 col-md-4 role">
                     <p>Front-End Team</p><p>Implemented Map API</p><p>Built Events and Calendar page</p>
                 </div>
             </div>
@@ -158,15 +154,13 @@
                 <a href="https://jambook-new.herokuapp.com/"><img class="porti" src="jambook.png" width="400" height="250"></a>
             </div>
             <div class="col-md-offset-1 col-md-3 jambook2">    
-                    <div class="magic">
-                            <a href="https://jambook-new.herokuapp.com/">Jambook</a>
-                            </div>
-                <p><strong>Jambook</strong> - Tired of playing music alone? Try <strong>Jambook</strong>, an easy way to find musicians to Jam with! You can sort by location and skill level. </p>
+                            <p><strong><u>JamBook</u></strong></p>
+                            <p>Tired of playing music alone? Try <strong>JamBook</strong>, an easy way to find musicians to Jam with! You can sort by location and skill level. </p>
 
             </div>
         </div>
         <div class="row">
-                <div class="col-md-offset-5 col-md-2 role">
+                <div class="col-md-offset-6 col-md-4 role">
                     <p>Front-End Team</p><p>Generated App Idea</p><p>Complete website design</p>
                 </div>
             </div>
