--- a/index2.html
+++ b/index2.html
@@ -91,9 +91,9 @@
 
         <div class="col-md-3 skills">
             <p><strong>Front-end</strong></p>
-                <p>HTML, CSS3, Javascript, React <p></p> Bootstrap, Materialize, Wordpress</p>
+                <p>HTML, CSS, Javascript, React <p></p> Bootstrap, Materialize, Wordpress</p>
             <p><strong>Back-end</strong></p>
-                <p>Node, mySQL, MongoDB, </p><p> Express, JQuery, Firebase </p>
+                <p>Node, MySQL, MongoDB, </p><p> Express, JQuery, Firebase </p>
         </div>
         <div class="col-md-1 col-md-offset-">
             <img class="face" src="dzg.png" style="width:200px;" alt="me">
@@ -197,7 +197,7 @@
 
             </div>    
             </form>
-                            
+            <a href=""><button type="button" id="message-me" class="btn btn-primary-outline btn-lg">Submit</button></a>          
             </div>
     </div>
 
