--- a/landing-gears.html
+++ b/landing-gears.html
@@ -189,7 +189,7 @@
 						}
 						#build {
 							color:#ffffff;
-							font-family: 'Montserrat', sans-serif;
+							font-family: 'Libre Franklin', sans-serif;
 							animation-name:fadeInUp;
 							/*animation:click 1s linear forwards;*/
 							animation-delay:1s;
@@ -200,7 +200,7 @@
 						}
 						#something {
 							color:#ffffff;
-							font-family: 'Rokkitt', serif;
+							font-family: 'Libre Franklin', sans-serif;
 							animation-name:fadeInUp;
 							/*animation:click 1s linear forwards;*/
 							animation-delay:1.5s;
@@ -223,15 +223,15 @@
 						}
 						#together {
 							padding-bottom:4px;
-							border-bottom:4px solid #ffffff;
+							/* border-bottom:4px solid #ffffff; */
 							color:#ffffff;
-							font-family: 'Kite One', sans-serif;
+							font-family: 'Libre Franklin', sans-serif;
 							animation-name:fadeInUp;
 							/*animation:click 1s linear forwards;*/
 							animation-delay:2.5s;
-							font-size:55px;
+							font-size:45px;
 							position:absolute;
-							top:63%;
+							top:60%;
 							left:8%;
 						}
 						#main {
@@ -245,21 +245,21 @@
 							box-shadow:10px 10px 5px #888888;
 							position:absolute;
 							top:20%;
-							left:15%;
+							margin:auto;
 						}
 						#gearsYo {
-							width:35%;
+							width:25%;
 							height:auto;
 							position:absolute;
 							top:15%;
-							left:65%;
+							left:75%;
 						}
 						#fistBump {
 							width:60%;
 							height:auto;
 							position:absolute;
-							top:5%;
-							left:20%;
+							top:25%;
+							left:27%;
 						}
 					</style>
 
