--- a/index3.html
+++ b/index3.html
@@ -103,7 +103,7 @@
         <div class="animations">I enjoy creating CSS Animations, <br> To check them out click the link below </div>
 
             <div class="row">
-                <div class="col-md-offset-4 col-md-4">
+                <div class="col-md-offset-4 col-md-3">
                     <a href="landing-gears.html"><button type="button" id="learnMore3" class="btn btn-primary-outline btn-lg">Animations</button></a>
                 </div>
             </div>        
@@ -114,7 +114,7 @@
             <div class="subname">My Work</div>
         </div>
         <div class="row">
-            <div class="col-md-offset-3 col-md-4 jambook2">    
+            <div class="col-md-offset-4 col-md-4 jambook2">    
                 <p><strong><u>JamBook</u></strong></p>
                 <p>Tired of playing music alone? Try <strong>JamBook</strong>, an easy way to find musicians to Jam with! You can sort by location and skill level. </p>
             </div>
@@ -123,8 +123,13 @@
             <div class="col-md-offset-3 col-md-3 jambook">
                 <a href="https://jambook-new.herokuapp.com/"><img class="porti" src="assets/images/jambook.png" width="400" height="250"></a>
             </div>
-                <div class="col-md-offset-1 col-md-5 role">
-                    <p><strong><u>Built with</u></strong></p><p>React</p><p>Node</p><p>Auth0</p>
+                <div class="col-md-offset-1 col-md-2 role">
+                    <p><strong><u>Built with</u></strong></p>
+                    <div class="tech">
+                            <img class="bubble" src="assets/images/react.png">
+                            <img class="bubble" src="assets/images/mysql.png">
+                            <img class="bubble" src="assets/images/jquery.png">
+                        </div>
                     <p>Front-End Team</p><p>Generated App Idea</p><p>Complete website design</p>
             </div>
         </div>    
@@ -132,7 +137,7 @@
         <hr class="block">
 
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-offset-3 col-md-3 speakup"> 
                 <a href="https://gt-speakup.herokuapp.com/"><img class="porti" src="assets/images/speakup.png" width="400" height="250"></a>
             </div>
@@ -145,27 +150,56 @@
             <div class="col-md-offset-6 col-md-4 role">
                 <p>Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
             </div>
-        </div>
+        </div> -->
+
+        <div class="row">
+                <div class="col-md-offset-4 col-md-4 speakup">    
+                    <p><strong><u>SpeakUp</u></strong></p>
+                    <p>A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
+                </div>
+            </div>
+            <div class="row">                
+                <div class="col-md-offset-3 col-md-3 speakup2">
+                        <a href="https://gt-speakup.herokuapp.com/"><img class="porti" src="assets/images/speakup.png" width="400" height="250"></a>
+                </div>
+                    <div class="col-md-offset-1 col-md-2 role">
+                        <p><strong><u>Built with</u></strong></p>
+                        <div class="tech">
+                                <img class="bubble" src="assets/images/firebase.png">
+                                <img class="bubble" src="assets/images/materialize.png">
+                                <img class="bubble" src="assets/images/socket.png">
+                            </div>
+                            <p>Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
+                </div>
+            </div>
 
         <hr class="block">
 
-        <div class="row">  
-            <div class="col-md-offset-3 col-md-3 epicgg">
-                        <p><strong><u>Epic GG</u></strong></p>
-                        <p>Get all of your video game content in one place. <strong>Epicc GG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
-
-            </div>    
-            <div class="col-md-3 epicgg2">    
-                <a href="http://dgabai1.github.io/GamingVideos/"><img class="porti" src="assets/images/epicgg.png" width="400" height="250"></a>
-
-            </div>
-        </div>
         <div class="row">
-                <div class="col-md-offset-3 col-md-4 role">
-                    <p>Front-End Team</p><p>Implemented Map API</p><p>Built Events and Calendar page</p>
+                <div class="col-md-offset-4 col-md-4 epicgg">    
+                    <p><strong><u>Epic GG</u></strong></p>
+                    <p>Get all of your video game content in one place. <strong>Epicc GG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
                 </div>
             </div>
-    </div>    
+            <div class="row">                
+                <div class="col-md-offset-3 col-md-3 epicgg2">
+                        <a href="http://dgabai1.github.io/GamingVideos/"><img class="porti" src="assets/images/epicgg.png" width="400" height="250"></a>
+                </div>
+                    <div class="col-md-offset-1 col-md-2 role">
+                        <p><strong><u>Built with</u></strong></p>
+                        <div class="tech">
+                                <img class="bubble" src="assets/images/html5.png">
+                                <img class="bubble" src="assets/images/css3.png">
+                                <img class="bubble" src="assets/images/javascript.png">
+                            </div>
+                            <p>Front-End Team</p><p>Implemented Map API</p><p>Built Events and Calendar page</p>
+                </div>
+            </div>
+
+            <br>
+            <br>
+            <br>
+            <br>
 
 
     <div id="plants">
