--- a/landing-gears.html
+++ b/landing-gears.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>RollerCoaster</title>
+	<title>Lets build something beautiful</title>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
