--- a/index3.html
+++ b/index3.html
@@ -64,7 +64,7 @@
         <div id="fly5"></div>
         <div id="fly6"></div>
 
-        <button type="button" id="learnMore2" class="btn btn-primary-outline btn-lg">Learn More</button>
+        <!-- <button type="button" id="learnMore2" class="btn btn-primary-outline btn-lg">Learn More</button> -->
     </div>
 
     <div id="about">
@@ -83,7 +83,6 @@
             <div class="col-md-3 col-md-offset-2 info">
                 <p>Hi, I'm Donny. I'm a Web Developer/Designer with a passion for clean code and beautiful design.
                     I strive to write well designed, testable, efficient code by using best software development practices.</p>
-                    <p>Let's build something beautiful together!</p>
             </div>
 
         <div class="col-md-3 skills">
@@ -99,14 +98,21 @@
 </div>
 
 <div id="plants">
-        <div class="subname2">Animations</div>
-        <div class="animations">I enjoy creating CSS Animations, <br> To check them out click the link below </div>
-
+        <div class="row">
+            <div class="col-md-offset-3 col-md-6">
+                <div class="animations">I enjoy creating CSS Animations, <br> To check them out click the link below </div>
+            </div>
+        </div> 
             <div class="row">
-                <div class="col-md-offset-4 col-md-3">
+                <div class="col-md-offset-4 col-md-4">
                     <a href="landing-gears.html"><button type="button" id="learnMore3" class="btn btn-primary-outline btn-lg">Animations</button></a>
                 </div>
-            </div>        
+            </div>
+            <div class="row">
+                <div class="col-md-offset-3 col-md-6 animations">
+                    <p>Let's build something beautiful together!</p>     
+                </div>
+            </div>   
     </div>
 
     <div id="projects">
@@ -114,16 +120,16 @@
             <div class="subname">My Work</div>
         </div>
         <div class="row">
-            <div class="col-md-offset-4 col-md-4 jambook2">    
+            <div class="col-md-offset-3 col-md-6 jambook2">    
                 <p><strong><u>JamBook</u></strong></p>
-                <p>Tired of playing music alone? Try <strong>JamBook</strong>, an easy way to find musicians to Jam with! You can sort by location and skill level. </p>
+                <p>Tired of playing music alone? Try <strong>JamBook</strong>, an easy way to find other musicians to collaborate with! You can sort by location, style of music or even skill level. Upload your info, maybe a picture and you're ready to jam! </p>
             </div>
         </div>
         <div class="row">                
             <div class="col-md-offset-3 col-md-3 jambook">
                 <a href="https://jambook-new.herokuapp.com/"><img class="porti" src="assets/images/jambook.png" width="400" height="250"></a>
             </div>
-                <div class="col-md-offset-1 col-md-2 role">
+                <div class="col-md-offset-1 col-md-3 role">
                     <p><strong><u>Built with</u></strong></p>
                     <div class="tech">
                             <img class="bubble" src="assets/images/react.png">
@@ -133,27 +139,12 @@
                     <p>Front-End Team</p><p>Generated App Idea</p><p>Complete website design</p>
             </div>
         </div>    
+    
 
         <hr class="block">
 
-
-        <!-- <div class="row">
-            <div class="col-md-offset-3 col-md-3 speakup"> 
-                <a href="https://gt-speakup.herokuapp.com/"><img class="porti" src="assets/images/speakup.png" width="400" height="250"></a>
-            </div>
-            <div class="col-md-offset-1 col-md-3 speakup2">
-                <p><strong><u>SpeakUp</u></strong></p>
-                <p>A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
-            </div>
-        </div>  
         <div class="row">
-            <div class="col-md-offset-6 col-md-4 role">
-                <p>Lead Front-End Team</p><p>Generated App Idea</p><p>Logo and overall Design</p>
-            </div>
-        </div> -->
-
-        <div class="row">
-                <div class="col-md-offset-4 col-md-4 speakup">    
+                <div class="col-md-offset-3 col-md-6 speakup">    
                     <p><strong><u>SpeakUp</u></strong></p>
                     <p>A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
                 </div>
@@ -162,7 +153,7 @@
                 <div class="col-md-offset-3 col-md-3 speakup2">
                         <a href="https://gt-speakup.herokuapp.com/"><img class="porti" src="assets/images/speakup.png" width="400" height="250"></a>
                 </div>
-                    <div class="col-md-offset-1 col-md-2 role">
+                    <div class="col-md-offset-1 col-md-3 role">
                         <p><strong><u>Built with</u></strong></p>
                         <div class="tech">
                                 <img class="bubble" src="assets/images/firebase.png">
@@ -176,7 +167,7 @@
         <hr class="block">
 
         <div class="row">
-                <div class="col-md-offset-4 col-md-4 epicgg">    
+                <div class="col-md-offset-3 col-md-6 epicgg">    
                     <p><strong><u>Epic GG</u></strong></p>
                     <p>Get all of your video game content in one place. <strong>Epicc GG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
                 </div>
@@ -185,17 +176,17 @@
                 <div class="col-md-offset-3 col-md-3 epicgg2">
                         <a href="http://dgabai1.github.io/GamingVideos/"><img class="porti" src="assets/images/epicgg.png" width="400" height="250"></a>
                 </div>
-                    <div class="col-md-offset-1 col-md-2 role">
+                    <div class="col-md-offset-1 col-md-3 role">
                         <p><strong><u>Built with</u></strong></p>
                         <div class="tech">
-                                <img class="bubble" src="assets/images/html5.png">
+                                <img class="bubble" src="assets/images/HTML5.png">
                                 <img class="bubble" src="assets/images/css3.png">
                                 <img class="bubble" src="assets/images/javascript.png">
                             </div>
                             <p>Front-End Team</p><p>Implemented Map API</p><p>Built Events and Calendar page</p>
                 </div>
             </div>
-
+        </div>
             <br>
             <br>
             <br>
@@ -204,36 +195,35 @@
 
     <div id="plants">
             <div class="row">
-                <div class="more">Want more examples of my work?</div> 
-            <div class="row more"">
+                <div class="more">Want more examples of my work, or just want to say Hi!</div> 
+            <div class="row more">
                 <u>Shoot me a message!</u>
                 </div>
             </div>
+            <br>
             <div class="row">
-            <form>
-                <div class="form-group col-md-offset-4 col-md-4">
-                    <label for="nameInput">Your Name</label>
-                    <input type="text" class="form-control" id="nameInput" placeholder="">
+                <div class="col-md-offset-4 col-md-4 form-yo">
+                    <form method="POST" action="http://formspree.io/donny.gabai@gmail.com">
+                        <div class="row">
+                            <label for="email-input">Your Email</label>
+                            <br>
+                            <input class="form-control form-control-lg" type="email" name="email" placeholder="">
+                        </div>
+                        <br>
+                        <br>
+                        <div class="row">
+                            <label for="message-input">Your Message</label>
+                            <br>
+                            <textarea class="form-control form-control-lg" name="message" placeholder="" rows="4"></textarea>
+                        </div>
+                        <br>
+                        <br>
+                        <div class="col-md-offset-8 col-md-2">
+                        <button type="submit" id="message-me" class="btn btn-primary-outline btn-lg">Send</button>
+                    </div>
+                    </form>
                 </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-md-offset-4 col-md-4">
-                    <label for="emailInput">Email address</label>
-                    <input type="email" class="form-control" id="emailInput" placeholder="">
-                </div>
-            </div>
-            <div class="row col-md-offset-4 col-md-4">
-                <label for="messageInput">Your Message</label>
-            </div>
-            <div class="row">                
-                <div class="form-group col-md-offset-4 col-md-4">
-                    <textarea class="form-control" rows="4"></textarea>
-                </div>
-
-            </div>    
-            </form>
-            <a href=""><button type="button" id="message-me" class="btn btn-primary-outline btn-lg">Submit</button></a>          
-            </div>
+            </div>          
     </div>
 
     <div id="contact">
@@ -242,7 +232,7 @@
         <a href="https://www.linkedin.com/in/daniel-gabai/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
         <a href="https://stackoverflow.com/users/7753778/daniel-g"><img src="assets/images/stack.png" class="social" alt="Stack Overflow" /></a>
         <a href="https://stackoverflow.com/users/7753778/daniel-g"><img src="assets/images/Facebook-logo-f.png" class="social" alt="facebook" /></a>
-        <div class="copyright"> &copy; 2017 Donny Gabai</div>
+        <div class="copyright"> &copy; 2018 Donny Gabai</div>
     </div>
     <script src="assets/javascript/app.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
