--- a/index3.html
+++ b/index3.html
@@ -10,21 +10,26 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Cinzel|Indie+Flower|Josefin+Sans|Pacifico|Raleway|Comfortaa|Domine|Exo|Josefin+Slab|Montserrat+Subrayada|Roboto+Mono" rel="stylesheet">
     <link rel="shortcut icon" href="assets/images/logo.png">
+    <!-- linkedin -->
+    <meta property='og:title' content='Portfolio website'/>
+    <meta property='og:image' content='//www.donnygabai.com/capture.png'/>
+    <meta property='og:description' content='My Portfolio, A site to show a list of completed projects and technologies'/>
+    <meta property='og:url' content='//www.donnygabai.com'/>
 
 </head>
 
 <body>
-        <div class="hamburger"><img src="assets/images/hamburger2.png" style="height:40px; width:40px;"></div>
+        <!-- <div class="hamburger"><img src="assets/images/hamburger2.png" style="height:40px; width:40px;"></div> -->
         
-        <div class="hidden-navbar">
-                <ul>
+        <!-- <div class="hidden-navbar">
+                <ul id="newnav">
                     <li><a href="#deer">home</a></li>
                     <li><a href="#about">about</a></li>
                     <li><a href="#projects">projects</a></li>
                     <li><a href="#contact">contact</a></li>
 
                 </ul>
-            </div>
+            </div> -->
 
     <div id="deer">
 
@@ -105,7 +110,7 @@
         </div> 
             <div class="row">
                 <div class="col-md-offset-4 col-md-4">
-                    <a href="landing-gears.html"><button type="button" id="learnMore3" class="btn btn-primary-outline btn-lg">Animations</button></a>
+                    <a href="forest.html" target="_blank"><button type="button" id="learnMore3" class="btn btn-primary-outline btn-lg">Animations</button></a>
                 </div>
             </div>
             <div class="row">
@@ -121,13 +126,13 @@
         </div>
         <div class="row">
             <div class="col-md-offset-3 col-md-6 jambook2">    
-                <p><strong><u>JamBook</u></strong></p>
+                <a href="https://jambook-new.herokuapp.com/" target="_blank"><p><strong><u>JamBook</u></strong></p></a>
                 <p>Tired of playing music alone? Try <strong>JamBook</strong>, an easy way to find other musicians to collaborate with! You can sort by location, style of music or even skill level. Upload your info, maybe a picture and you're ready to jam! </p>
             </div>
         </div>
         <div class="row">                
             <div class="col-md-offset-3 col-md-3 jambook">
-                <a href="https://jambook-new.herokuapp.com/"><img class="porti" src="assets/images/jambook.png" width="400" height="250"></a>
+                <a href="https://jambook-new.herokuapp.com/" target="_blank"><img class="porti" src="assets/images/jambook.png" width="400" height="250"></a>
             </div>
                 <div class="col-md-offset-1 col-md-3 role">
                     <p><strong><u>Built with</u></strong></p>
@@ -145,13 +150,13 @@
 
         <div class="row">
                 <div class="col-md-offset-3 col-md-6 speakup">    
-                    <p><strong><u>SpeakUp</u></strong></p>
+                    <a href="https://gt-speakup.herokuapp.com/" target="_blank"><p><strong><u>SpeakUp</u></strong></p></a>
                     <p>A messaging app for friends, family or colleages. On <strong>Speakup</strong> you can send notes, videos or even gifs. Just make a username and join a chat room!</p>
                 </div>
             </div>
             <div class="row">                
                 <div class="col-md-offset-3 col-md-3 speakup2">
-                        <a href="https://gt-speakup.herokuapp.com/"><img class="porti" src="assets/images/speakup.png" width="400" height="250"></a>
+                        <a href="https://gt-speakup.herokuapp.com/" target="_blank"><img class="porti" src="assets/images/speakup.png" width="400" height="250"></a>
                 </div>
                     <div class="col-md-offset-1 col-md-3 role">
                         <p><strong><u>Built with</u></strong></p>
@@ -168,13 +173,13 @@
 
         <div class="row">
                 <div class="col-md-offset-3 col-md-6 epicgg">    
-                    <p><strong><u>Epic GG</u></strong></p>
+                    <a href="http://dgabai1.github.io/GamingVideos/" target="_blank"><p><strong><u>Epic GG</u></strong></p></a>
                     <p>Get all of your video game content in one place. <strong>Epicc GG</strong> utilizes 3 APIs to pull top streamers from YouTube and Twitch!</p>
                 </div>
             </div>
             <div class="row">                
                 <div class="col-md-offset-3 col-md-3 epicgg2">
-                        <a href="http://dgabai1.github.io/GamingVideos/"><img class="porti" src="assets/images/epicgg.png" width="400" height="250"></a>
+                        <a href="http://dgabai1.github.io/GamingVideos/" target="_blank"><img class="porti" src="assets/images/epicgg.png" width="400" height="250"></a>
                 </div>
                     <div class="col-md-offset-1 col-md-3 role">
                         <p><strong><u>Built with</u></strong></p>
@@ -228,11 +233,11 @@
 
     <div id="contact">
 
-        <a href="https://github.com/dgabai1"><img src="assets/images/githublogo.jpg" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/daniel-gabai/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/7753778/daniel-g"><img src="assets/images/stack.png" class="social" alt="Stack Overflow" /></a>
-        <a href="https://stackoverflow.com/users/7753778/daniel-g"><img src="assets/images/Facebook-logo-f.png" class="social" alt="facebook" /></a>
-        <div class="copyright"> &copy; 2018 Donny Gabai</div>
+        <a href="https://github.com/dgabai1" target="_blank"><img src="assets/images/githublogo.jpg" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/daniel-gabai/" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <!-- <a href="https://stackoverflow.com/users/7753778/daniel-g" target="_blank"><img src="assets/images/stack.png" class="social" alt="Stack Overflow" /></a> -->
+        <a href="https://www.facebook.com/profile.php?id=10136495" target="_blank"><img src="assets/images/Facebook-logo-f.png" class="social" alt="facebook" /></a>
+        <div id="copyright"> &copy; 2018 Donny Gabai</div>
     </div>
     <script src="assets/javascript/app.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
