--- a/yellow.html
+++ b/yellow.html
@@ -11,6 +11,7 @@
     <a id="sub" href='shrink.html'><img  src="assets/images/submarine.svg" alt="a cute submarine" usemap="#workmap" style="width:300px;height:200px;">
     </a>
 
+    <div class="instructions">Click the sub to move on to the next animation</div>
 
     <ul class="bubbles">
         <li></li>
@@ -38,7 +39,17 @@
 
 </body>
 <style>
-.bubbles {
+    .instructions {
+        text-align: center;
+        width:35%;
+        padding:5px 10px;
+        font-size:25px;
+        color:#ffffff;
+        border:2px solid #ffffff;
+        border-radius:10px;
+    }
+
+    .bubbles {
     position: absolute;
     top: 0;
     left: 0;
@@ -53,8 +64,8 @@
     z-index:1;
     opacity: 0;
     position: absolute;
-    animation-delay: 1s !important;
-    animation: sub 18s infinite;
+    animation-delay: 5s !important;
+    animation: sub 15s infinite;
 }
 
 @keyframes sub {
